templates/rtsp_template.yaml
---
# Source: rtsp/templates/service.yaml
# rtsp-svc
apiVersion: v1
kind: Service
metadata:
  name: mystream
  labels:
    app: rtsp
    app.kubernetes.io/name: rtsp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: rtsp-0.0.14
spec:
  type: ClusterIP
  ports:
    - name: rtsp
      port: 554
      targetPort: 554
      protocol: TCP
  selector:
    app: rtsp
---
# Source: rtsp/templates/service.yaml
# hls-svc
apiVersion: v1
kind: Service
metadata:
  name: mystream-hls
  labels:
    app: rtsp
    app.kubernetes.io/name: rtsp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: rtsp-0.0.14
spec:
  type: ClusterIP
  ports:
    - name: hls
      port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: rtsp
---
# Source: rtsp/templates/deployment.yaml
# rtsp-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtsp-server
  labels:
    app: rtsp
    app.kubernetes.io/name: rtsp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: rtsp-0.0.14
spec:
  selector:
    matchLabels:
      app: rtsp
  template:
    metadata:
      labels:
        app: rtsp
        sidecar.mediastreamingmesh.io/inject: "true"
    spec:
      containers:
        - name: rtsp-server
          image: "ciscolabs/rtsp-server:latest"
          imagePullPolicy: IfNotPresent
        - name: rtsp-client
          image: "ciscolabs/rtsp-client:latest"
          imagePullPolicy: IfNotPresent
          command: ["ffmpeg"]
          args: ["-re", "-stream_loop", "-1", "-i", "/tmp/coding.mp4", "-an", "-c:v", "copy", "-f", "rtsp", "rtsp://0.0.0.0:554/mystream"]
          volumeMounts:
            - mountPath: /tmp
              name: movies
      volumes:
        - name: movies
          hostPath:
            path: /tmp
---
# Source: rtsp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: rtsp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: rtsp-0.0.14
  name: mystream
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: mystream-hls
            port:
              number: 8888
        path: /mystream
        pathType: Prefix
